# aurite-agents

./: .aurite  .bashrc  .dockerignore  .env.example  .env.vault  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  DOCKER_SECURITY.md  Dockerfile  Dockerfile.dev  Dockerfile.public  LICENSE  MANIFEST.in  README.md  README_packaged.md  SECURITY.md  aurite_api_comprehensive_design_review_with_branch_comparison.md  aurite_config.json  claude.md  config_example.json  debug_sse_client_stall.py  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  frontend_code_review.md  index.html  jest.config.js  justfile  k8s  mcp_host_unregistration_fix_summary.md  mkdocs.yml  newman-report.json  newman-results.json  newman_results_config_manager_new_branch.json  newman_results_facade_new_branch.json  (+26 more)
aurite-mcp/: .gitignore  README.md  first_round.json  hello.py  march_madness_output.txt  march_madness_output_v1.txt  pyproject.toml  requirements.txt
aurite-mcp/config/: host.json
aurite-mcp/config/agents/: aurite_agents.json  planning_workflow.json  testing_config.json
aurite-mcp/config/host/: temp.json
aurite-mcp/config/storage/: storage_config.json  temp.json
aurite-mcp/config/workflows/: aurite_workflows.json
aurite-mcp/docs/: agent_integration.md  architecture_overview.md  secure_database_design.md  secure_sql_connections.md  testing_infrastructure.md  testing_strategy.md  workflow_architecture.md
aurite-mcp/docs/.old_coding_copilot_prompts/: host_overhaul_brainstorm.md  next_phase.md  phase3.md
aurite-mcp/docs/agents/: agent_architecture.md  dynamic_architecture.md  workflow_architecture.md  workflow_manager.md
aurite-mcp/docs/host/: host_implementation.md  host_system.md  host_system_design.md  secure_database_implementation.md
aurite-mcp/docs/plans/: agent_workflow_refactor_plan.md  host_cleanup_plan.md  main_server_plan.md  overarching_host_refactor_plan.md  overarching_plan.md  phase1_implementation_plan.md  phase2_implementation_plan.md  phase3_implementation_plan.md  planning_agent_workflow_impl_plan.md  testing_improvements_implementation_plan.md  testing_strategy.md
aurite-mcp/docs/testing/: main_server.postman_collection.json
aurite-mcp/examples/: __init__.py  agent_examples.py  test_base_agent.py  test_evaluator.py  test_fastmcp_server.py  test_host_integration.py  test_mcp_server.py  test_planning_python.py  test_sql_host_integration.py  weather_host.py  weather_server.py  weather_tools.py  workflow_host.py
aurite-mcp/examples/basic/: test_fastmcp_server.py  test_host_integration.py  test_sql_host_integration.py
aurite-mcp/examples/march_madness_agent/: march_madness_host.py  march_madness_server.py
aurite-mcp/examples/march_madness_agent/inputs/: ro_4.json  ro_8.json  ro_sixteen.json
aurite-mcp/examples/march_madness_agent/outputs/: agent_round_1.json  agent_round_16.json  agent_round_2.json  agent_round_4.json  agent_round_8.json  march_madness_output.txt
aurite-mcp/host-backup/: models.py
aurite-mcp/host-backup/agent/: workflows.py
aurite-mcp/host-backup/communication/: routing.py
aurite-mcp/host-backup/resources/: __init__.py  prompts.py  resources.py  storage.py
aurite-mcp/old-picks/: agent_round_1.json  agent_round_2.json  agent_round_3.json  agent_round_4.json  agent_round_5.json  agent_round_6.json
aurite-mcp/picks/: agent_round_1.json  agent_round_2.json  agent_round_3.json  agent_round_4.json  agent_round_5.json  agent_round_6.json
aurite-mcp/src/: __init__.py  app.py  config.py  host.py  main.py
aurite-mcp/src/agents/: __init__.py  agent.py  base_agent.py  base_models.py  base_utils.py  base_workflow.py
aurite-mcp/src/agents/evaluation/: README.md  eval_workflow.py  evaluation_server.py  evaluation_utils.py  evaluation_workflow.py  models.py
aurite-mcp/src/agents/examples/: __init__.py  audio_memory_workflow.py  data_analysis_workflow.py  document_processor.py  march_madness_server.py  march_madness_workflow.py  research_assistant.py  simple_planning_workflow_example.py
aurite-mcp/src/agents/management/: planning_agent.py
aurite-mcp/src/agents/planning/: README.md  __init__.py  planning_server.py  planning_workflow.py  test_planning_direct.py  test_planning_server.py  test_planning_workflow.py
aurite-mcp/src/clients/: client.py  client_handler.py
aurite-mcp/src/host/: README.md  config.py  connection_manager.py  host.py  models.py  prompts.py  resources.py  roots.py  routing.py  security.py  storage.py  transport.py
aurite-mcp/src/host/agent/: __init__.py  agents.py  workflows.py
aurite-mcp/src/host/communication/: __init__.py
aurite-mcp/src/host/foundation/: roots.py
aurite-mcp/src/host/resources/: __init__.py  prompts.py  resources.py  storage.py  tools.py
aurite-mcp/src/host/workflow/: workflows.py
aurite-mcp/src/memory/: mem0_server.py
aurite-mcp/src/misc/speech/: speech_server.py  speech_workflow.py
aurite-mcp/src/routes/: chat_router.py
aurite-mcp/src/servers/: server.py
aurite-mcp/src/storage/: storage_router.py
aurite-mcp/src/storage/sql/: sql_server.py
aurite-mcp/src/tools/: __init__.py  weather.py
aurite-mcp/tests/: README.md  conftest.py
aurite-mcp/tests/agents/: README.md  test_agent.py  test_agent_e2e.py  test_data_analysis_workflow.py  test_evaluation_workflow.py  test_planning_agent.py  test_planning_agent_e2e.py  test_planning_workflow.py  test_planning_workflow_integration.py  test_workflow_manager.py
aurite-mcp/tests/agents/evaluation/: README.md  __init__.py  (+2 more)
aurite-mcp/tests/fixtures/: __init__.py  agent_fixtures.py  host_fixtures.py
aurite-mcp/tests/host/: test_exclusion.py  test_host_basic.py  test_host_basic_e2e.py
aurite-mcp/tests/memory/: test_host_memory.py
aurite-mcp/tests/mocks/: mock_anthropic.py
aurite-mcp/tests/servers/: test_config.py  test_evaluation_server.py  test_generic_mcp_server.py  test_generic_mcp_server_e2e.py  test_mcp_functional.py  test_mcp_servers.py  test_planning_server.py  test_weather_mcp_server.py
aurite-mcp/tests/storage/: test_host_security.py
docs/: HOME.md  (+19 more)
(+1436 files in other folders)
