[project]
name = "aurite"
version = "0.4.1"
description = "Aurite Agents is an agent development and runtime framework."
authors = [
    { name = "Ryan W", email = "ryan@aurite.ai" },
    { name = "Blake R", email = "blake@aurite.ai" },
    { name = "Patrick W", email = "patrick@aurite.ai" },
    { name = "Jiten Oswal", email = "jiten@aurite.ai" },
]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.11,<4.0.0"
keywords = ["ai", "agent", "mcp", "framework", "llm", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "mcp (>=1.10.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "jsonschema (>=4.24.0,<5.0.0)",
    "exceptiongroup (>=1.3.0,<2.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "typer[all] (>=0.16.0,<0.17.0)",

    "uvicorn (>=0.29.0,<0.36.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "openai (>=1.99.6,<1.100.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "cryptography (>=43.0.0,<46.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "textual[syntax] (>=3.5.0,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "langfuse (>=2,<3)",
    "networkx (>=3.5,<4.0)",
    # NOTE: Using core LiteLLM without [proxy] extra to avoid dependency conflicts
    # The [proxy] extra brings in heavy dependencies that conflict with FastMCP's rich requirements
    "litellm (>=1.75.4,<2.0.0)",
    "fastmcp (>=2.11.3,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

# DEV DEPENDENCIES
[tool.poetry.group.dev.dependencies]
textual-dev = ">=1.7.0,<2.0.0"
pytest = "^8.4.1"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.4.0"
mypy = "^1.16.1"
types-pyyaml = "^6.0.12.20250516"
types-pytz = "^2025.2.0.20250516"
jupyter = "^1.1.1"
pre-commit = "^4.2.0"
alembic = "^1.16.2"
deptry = { version = "^0.23.0", python = ">=3.11,<4.0" }
pytest-httpserver = "^1.1.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.6.16"
pymdown-extensions = "^10.16.1"
pytest-benchmark = "^5.1.0"

[project.scripts]
aurite = "aurite.bin.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://aurite-ai.github.io/aurite-agents/"
Repository = "https://github.com/Aurite-ai/aurite-agents"


# POETRY CONFIGURATION
[tool.poetry]
packages = [{ include = "aurite", from = "src" }]
include = [
    "LICENSE",
    { path = "src/aurite/lib/init_templates", format = [
        "sdist",
        "wheel",
    ] },
    { path = "src/aurite/bin/studio/static", format = [
        "sdist",
        "wheel",
    ] },
    { path = "src/aurite/bin/studio/static/**/*", format = [
        "sdist",
        "wheel",
    ] },
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

# PYTEST CONFIGURATION
[tool.pytest.ini_options]
anyio_mode = "asyncio"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (component interaction)",
    "e2e: marks tests as end-to-end tests (may require external resources)",
    "host: marks tests related to the Host Layer (Layer 3)",
    "orchestration: marks tests related to the Orchestration Layer (Layer 2)",
    "entrypoints: marks tests related to the Entrypoints Layer (Layer 1)",
    "anyio: marks tests as anyio-based async tests",
    "core: mark test as core functionality test",
    "user: mark test as requiring user credentials",
    "extended: mark test as extended functionality test",
    "agent: mark test as agent test",
    "infrastructure: mark test as infrastructure/setup verification",
    "evaluation: mark test as agent evaluation test",
    "rubric: mark test that uses an evaluation rubric",
    "multirun: mark test that runs multiple evaluation iterations",
    "benchmark: mark test that compares against benchmarks",
]
pythonpath = [".", "src", "aurite"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::UserWarning",
    "ignore::UserWarning:pydantic.*",
    "ignore::RuntimeWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::pytest.PytestConfigWarning",
]
addopts = "--verbose --no-header --disable-warnings"
junit_family = "xunit2"
timeout = 60

# MYPY CONFIGURATION
[tool.mypy]
warn_return_any = false
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
show_error_codes = true
disallow_untyped_calls = false
files = ["src/aurite"]
follow_imports = "silent"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# DEPTRY CONFIGURATION
[tool.deptry]
known_first_party = ["aurite"]
extend_exclude = [
    "tests",
    "docs",
    "src/aurite/lib/storage/mcp_storage",
    "scripts",
]
per_rule_ignores = { DEP001 = [
    "pytest_benchmark",
    "importlib_resources",
], DEP002 = [
    "psycopg2-binary",
], DEP003 = [
    "google",
    "httpx",
    "psutil",
    "requests",
    "pytest_benchmark",
    "importlib_metadata",
], DEP004 = [
    "pandas",
    "redis",
    "mem0",
    "psycopg2",
    "sentence_transformers",
    "pytest_benchmark",
] }

[tool.deptry.package_module_name_map]
"psycopg2-binary" = "psycopg2"
"mem0ai" = "mem0"
"pandas" = "pandas"
"sentence-transformers" = "sentence_transformers"

# RUFF CONFIGURATION
[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["docs/"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E722", # do not use bare except
    "B017", # Blind exception
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E722", # do not use bare except
    "F403", # forbidden import
    "E402", # module level import not at top of file
]

[tool.ruff.lint.isort]
known-first-party = ["aurite"]
